inlet/outlet window methods now return a result
